--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,29 @@ body {
   color: #555;
 }
 
+.t2 {
+  font-weight: bold;
+}
+
+.card-header {
+  background-color: cornflowerblue;
+  color: white;
+}
+
+.incard {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.card {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#title-plan {
+  margin-bottom: 20px;
+}
+
 h1,
 .h1,
 h2,
