--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,8 +4,14 @@
 
 @media (min-width: 48em) {
   html {
-    font-size: 18px;
+    font-size: 16px;
   }
+}
+
+.navbar{
+  padding-bottom: 0.1rem;
+  padding-top: 0.1rem;
+  margin-bottom: 1.0rem;
 }
 
 body {
@@ -72,40 +78,6 @@ h6,
           box-shadow: inset 0 -0.1rem 0.25rem rgba(0, 0, 0, 0.1);
 }
 
-/* Nav links */
-
-.nav-link {
-  position: relative;
-  padding: 1rem;
-  font-weight: 500;
-  color: #cdddeb;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #fff;
-  background-color: transparent;
-}
-
-/* Active state gets a caret at the bottom */
-
-.nav-link.active {
-  color: #fff;
-}
-
-.nav-link.active::after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -.3rem;
-  vertical-align: middle;
-  content: "";
-  border-right: .3rem solid transparent;
-  border-bottom: .3rem solid;
-  border-left: .3rem solid transparent;
-}
 
 /*
  * Blog name and description
@@ -189,7 +161,7 @@ h6,
  */
 
 .blog-footer {
-  padding: 2.5rem 0;
+  padding: 0.5rem 0;
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
