--- a/public/css/index.css
+++ b/public/css/index.css
@@ -786,6 +786,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #team .member .pic {
   margin-bottom: 15px;
   overflow: hidden;
+  margin-top: -50px;
   height: 260px;
 }
 
